# fastapi-mysql-api

./: pyproject.toml
app/database/: __init__.py
app/models/: post.py  user.py
