[tool.poetry]
name = "fastapi-mysql-api"
version = "0.1.0"
description = ""
authors = ["Thomas Andersen <eldo0523@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.1"
sqlalchemy = "^2.0.32"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
